--- a/prompts.yaml
+++ b/prompts.yaml
@@ -319,3 +319,7 @@
   "report": |-
     Here is the final answer from your managed agent '{{name}}':
     {{final_answer}}
+
+"final_answer":
+  "pre_messages": ""
+  "post_messages": ""
